@@ -48,6 +48,7 @@ Cacti CHANGELOG
 -issue#5386: RRDCheck processes disabled hosts
 -issue#5390: Fix SQL error when saving DS template 
 -issue#5392: Template import should not end with php error
+-issue#5402: Cacti translations including less compatible language replacement characters in a few locations
 -issue#5403: Cacti Log regular expression filters can not calculate 'does not match' properly
 -feature#5375: Add template for Fortinet firewall and Aruba Instant cluster
 -feature#5393: Add template for SNMP printer
